es-derive2-test/tests/ui/errors/missing_required_attributes.rs
// Error: InjectableEvent requires both idempotency and correlation
#[derive(es_derive2::InjectableEvent)]
pub struct MyEvent {
    pub id: String,
}

fn main() {}
