es-derive2-test/tests/ui/errors/missing_required_attributes.stderr
error: missing required field #[es(idempotency)]

       Example usage:
         #[derive(InjectableEvent)]
         #[es(awaits = [PaymentResponse], idempotency = ["user.id"], correlation = ["transaction_id"], status = { exists })]
         pub struct PaymentRequested { ... }

 --> tests/ui/errors/missing_required_attributes.rs:2:10
  |
2 | #[derive(es_derive2::InjectableEvent)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `es_derive2::InjectableEvent` (in Nightly builds, run with -Z macro-backtrace for more info)
